Fix ssh compile

--- a/ssh/.ssh.conf.d/main.conf
+++ b/ssh/.ssh.conf.d/main.conf
@@ -1,5 +1,11 @@
+ServerAliveInterval 15
+
 Host boot2docker
   HostName     localhost
   Port         2022
   User         docker
   IdentityFile ~/.ssh/id_boot2docker
+
+Host localhost
+  StrictHostKeyChecking no
+  UserKnownHostsFile=/dev/null
