ghqのショートカットを復元する

--- a/private_dot_config/mise/config.toml
+++ b/private_dot_config/mise/config.toml
@@ -1,8 +1,12 @@
 [tools]
 bun = "latest"
 chezmoi = "latest"
+ghq = "latest"
+neovim = "latest"
 "npm:@openai/codex" = "latest"
 peco = "latest"
+tmux = "latest"
+usage = "latest"
 
 [env]
 MISE_NPM_PACKAGE_MANAGER = "bun"
